codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__full_access_confirmation_popup.snap
---
source: tui/src/chatwidget/tests/permissions.rs
assertion_line: 84
expression: popup
---
  Enable full access?
  When Codex Router runs with full access, it can edit any file on your
  computer and run commands with network, without your approval. Exercise
  caution when enabling full access. This significantly increases the risk of
  data loss, leaks, or unexpected behavior.

› 1. Yes, continue anyway      Apply full access for this session
  2. Yes, and don't ask again  Enable full access and remember this choice
  3. Cancel                    Go back without enabling full access

  Press enter to confirm or esc to go back
