codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__mcp_startup_header_booting.snap
---
source: tui/src/chatwidget/tests/mcp_startup.rs
assertion_line: 23
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
"• Booting MCP server: alpha (0s • esc to interrupt)                             "
"                                                                                "
"                                                                                "
"› Ask Codex Router to do anything                                               "
"                                                                                "
"  gpt-5.5 default · /tmp/project                                                "
